--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "homepage": "https://greedychicken.github.io/movies-browser/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.4",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.2.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
